--- a/AudioBuffer_Test/AudioBufferTest.qsf
+++ b/AudioBuffer_Test/AudioBufferTest.qsf
@@ -146,4 +146,5 @@ set_location_assignment PIN_J21 -to DRAM_DQM[1]
 set_location_assignment PIN_V22 -to DRAM_DQM[0]
 set_location_assignment PIN_U22 -to DRAM_RAS_N
 set_location_assignment PIN_V20 -to DRAM_WE_N
+set_global_assignment -name VECTOR_WAVEFORM_FILE output_files/Waveform.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
