Estructuracion completa como diagramas de bloques, compilacion exitosa, faltan pruebas

--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -67,4 +67,89 @@ set_global_assignment -name VHDL_FILE pwm.vhd
 set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name QIP_FILE ADC/synthesis/ADC.qip
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
+set_location_assignment PIN_N5 -to ADCCLK
+set_location_assignment PIN_AB7 -to AUDIO_OUT
+set_location_assignment PIN_P11 -to DE10CLK
+set_location_assignment PIN_C10 -to DE10Reset
+set_location_assignment PIN_C17 -to display0[7]
+set_location_assignment PIN_D17 -to display0[6]
+set_location_assignment PIN_E16 -to display0[5]
+set_location_assignment PIN_C16 -to display0[4]
+set_location_assignment PIN_C15 -to display0[3]
+set_location_assignment PIN_E15 -to display0[2]
+set_location_assignment PIN_C14 -to display0[1]
+set_location_assignment PIN_D15 -to display0[0]
+set_location_assignment PIN_B17 -to display1[7]
+set_location_assignment PIN_A18 -to display1[6]
+set_location_assignment PIN_A17 -to display1[5]
+set_location_assignment PIN_B16 -to display1[4]
+set_location_assignment PIN_E18 -to display1[3]
+set_location_assignment PIN_D18 -to display1[2]
+set_location_assignment PIN_C18 -to display1[1]
+set_location_assignment PIN_A16 -to display1[0]
+set_location_assignment PIN_B22 -to display2[7]
+set_location_assignment PIN_C22 -to display2[6]
+set_location_assignment PIN_B21 -to display2[5]
+set_location_assignment PIN_A21 -to display2[4]
+set_location_assignment PIN_B19 -to display2[3]
+set_location_assignment PIN_A20 -to display2[2]
+set_location_assignment PIN_B20 -to display2[1]
+set_location_assignment PIN_A19 -to display2[0]
+set_location_assignment PIN_E17 -to display3[7]
+set_location_assignment PIN_D19 -to display3[6]
+set_location_assignment PIN_C20 -to display3[5]
+set_location_assignment PIN_C19 -to display3[4]
+set_location_assignment PIN_E21 -to display3[3]
+set_location_assignment PIN_E22 -to display3[2]
+set_location_assignment PIN_F21 -to display3[1]
+set_location_assignment PIN_D22 -to display3[0]
+set_location_assignment PIN_R20 -to DRAM_ADDR[12]
+set_location_assignment PIN_P20 -to DRAM_ADDR[11]
+set_location_assignment PIN_T20 -to DRAM_ADDR[10]
+set_location_assignment PIN_P19 -to DRAM_ADDR[9]
+set_location_assignment PIN_P18 -to DRAM_ADDR[8]
+set_location_assignment PIN_R18 -to DRAM_ADDR[7]
+set_location_assignment PIN_T19 -to DRAM_ADDR[6]
+set_location_assignment PIN_T18 -to DRAM_ADDR[5]
+set_location_assignment PIN_U19 -to DRAM_ADDR[4]
+set_location_assignment PIN_U18 -to DRAM_ADDR[3]
+set_location_assignment PIN_V18 -to DRAM_ADDR[2]
+set_location_assignment PIN_W19 -to DRAM_ADDR[1]
+set_location_assignment PIN_U17 -to DRAM_ADDR[0]
+set_location_assignment PIN_T22 -to DRAM_BA[1]
+set_location_assignment PIN_T21 -to DRAM_BA[0]
+set_location_assignment PIN_U21 -to DRAM_CAS_N
+set_location_assignment PIN_N22 -to DRAM_CKE
+set_location_assignment PIN_L14 -to DRAM_CLK
+set_location_assignment PIN_U20 -to DRAM_CS_N
+set_location_assignment PIN_F22 -to DRAM_DQ[15]
+set_location_assignment PIN_G19 -to DRAM_DQ[14]
+set_location_assignment PIN_G20 -to DRAM_DQ[13]
+set_location_assignment PIN_G22 -to DRAM_DQ[12]
+set_location_assignment PIN_H22 -to DRAM_DQ[11]
+set_location_assignment PIN_H21 -to DRAM_DQ[10]
+set_location_assignment PIN_J22 -to DRAM_DQ[9]
+set_location_assignment PIN_P21 -to DRAM_DQ[8]
+set_location_assignment PIN_V21 -to DRAM_DQ[7]
+set_location_assignment PIN_W20 -to DRAM_DQ[6]
+set_location_assignment PIN_W22 -to DRAM_DQ[5]
+set_location_assignment PIN_Y22 -to DRAM_DQ[4]
+set_location_assignment PIN_AA21 -to DRAM_DQ[3]
+set_location_assignment PIN_AA22 -to DRAM_DQ[2]
+set_location_assignment PIN_Y20 -to DRAM_DQ[1]
+set_location_assignment PIN_Y21 -to DRAM_DQ[0]
+set_location_assignment PIN_J21 -to DRAM_DQM[1]
+set_location_assignment PIN_V22 -to DRAM_DQM[0]
+set_location_assignment PIN_U22 -to DRAM_RAS_N
+set_location_assignment PIN_V20 -to DRAM_WE_N
+set_location_assignment PIN_B11 -to led_out[9]
+set_location_assignment PIN_A11 -to led_out[8]
+set_location_assignment PIN_D14 -to led_out[7]
+set_location_assignment PIN_E14 -to led_out[6]
+set_location_assignment PIN_C13 -to led_out[5]
+set_location_assignment PIN_D13 -to led_out[4]
+set_location_assignment PIN_B10 -to led_out[3]
+set_location_assignment PIN_A10 -to led_out[2]
+set_location_assignment PIN_A9 -to led_out[1]
+set_location_assignment PIN_A8 -to led_out[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
