--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -144,6 +144,11 @@ set_location_assignment PIN_B10 -to led_out[3]
 set_location_assignment PIN_A10 -to led_out[2]
 set_location_assignment PIN_A9 -to led_out[1]
 set_location_assignment PIN_A8 -to led_out[0]
+set_location_assignment PIN_C11 -to DELAY_EN
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VHDL_FILE fixed_fload_types.vhd
+set_global_assignment -name VHDL_FILE fixed_pkg.vhd
 set_global_assignment -name VHDL_FILE ADC_simple.vhd
 set_global_assignment -name QIP_FILE ADC/synthesis/ADC.qip
 set_global_assignment -name VHDL_FILE RAM_Controller.vhd
@@ -153,5 +158,5 @@ set_global_assignment -name VHDL_FILE sigma_delta_second.vhd
 set_global_assignment -name VHDL_FILE pwm.vhd
 set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
-set_location_assignment PIN_C11 -to DELAY_EN
+set_location_assignment PIN_D12 -to DISROT_EN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
