--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -147,6 +147,19 @@ set_location_assignment PIN_A8 -to led_out[0]
 set_location_assignment PIN_C11 -to DELAY_EN
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_location_assignment PIN_D12 -to DISROT_EN
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name EXTERNAL_FLASH_FALLBACK_ADDRESS 00000000
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE IMAGE WITH ERAM"
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE conv.vhd
+set_global_assignment -name MIF_FILE audio_data.mif
 set_global_assignment -name VHDL_FILE fixed_fload_types.vhd
 set_global_assignment -name VHDL_FILE fixed_pkg.vhd
 set_global_assignment -name VHDL_FILE ADC_simple.vhd
@@ -158,5 +171,3 @@ set_global_assignment -name VHDL_FILE sigma_delta_second.vhd
 set_global_assignment -name VHDL_FILE pwm.vhd
 set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
-set_location_assignment PIN_D12 -to DISROT_EN
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
