--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -174,4 +174,5 @@ set_global_assignment -name VHDL_FILE pwm.vhd
 set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
 set_global_assignment -name BDF_FILE mul.bdf
+set_location_assignment PIN_C12 -to OCT_EN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
