--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -47,9 +47,9 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_SIMULATION_TOOL "<None>"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT NONE -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
@@ -160,6 +160,16 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 set_global_assignment -name DSP_BLOCK_BALANCING "DSP BLOCKS"
 set_location_assignment PIN_AB8 -to FIR_OUT
 set_location_assignment PIN_C12 -to OCT_EN
+set_location_assignment PIN_AB9 -to TREMOLO_OUT
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name FLOW_DISABLE_ASSEMBLER OFF
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name VHDL_FILE mul.vhd
+set_global_assignment -name VHDL_FILE ADD.vhd
+set_global_assignment -name VHDL_FILE "DAC-Signed.vhd"
+set_global_assignment -name VERILOG_FILE NCO_wrap.v
+set_global_assignment -name QIP_FILE Oscilator/synthesis/Oscilator.qip
 set_global_assignment -name VHDL_FILE 7SegDecoder.vhd
 set_global_assignment -name VHDL_FILE DAC2.vhd
 set_global_assignment -name VHDL_FILE ADC_debug.vhd
@@ -176,4 +186,6 @@ set_global_assignment -name VHDL_FILE pwm.vhd
 set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
 set_global_assignment -name BDF_FILE mul.bdf
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name VECTOR_WAVEFORM_FILE ../Waveform.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
