--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -165,6 +165,8 @@ set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name FLOW_DISABLE_ASSEMBLER OFF
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_location_assignment PIN_A12 -to TREMOLO_EN
+set_global_assignment -name VHDL_FILE RAM_MUX.vhd
 set_global_assignment -name VHDL_FILE Concatenador_Efectos.vhd
 set_global_assignment -name VHDL_FILE Tremolo.vhd
 set_global_assignment -name VHDL_FILE Octave.vhd
@@ -193,5 +195,4 @@ set_global_assignment -name BDF_FILE Effects_Pedal.bdf
 set_global_assignment -name BDF_FILE mul.bdf
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name VECTOR_WAVEFORM_FILE ../Waveform.vwf
-set_location_assignment PIN_A12 -to TREMOLO_EN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
