--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -166,6 +166,10 @@ set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name FLOW_DISABLE_ASSEMBLER OFF
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_location_assignment PIN_A12 -to TREMOLO_EN
+set_location_assignment PIN_Y10 -to REVERB_OUT
+set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_global_assignment -name VHDL_FILE reverb_block.vhd
+set_global_assignment -name QIP_FILE REVERB/synthesis/REVERB.qip
 set_global_assignment -name VHDL_FILE Preamp.vhd
 set_global_assignment -name VHDL_FILE RAM_MUX.vhd
 set_global_assignment -name VHDL_FILE Concatenador_Efectos.vhd
@@ -195,5 +199,4 @@ set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
 set_global_assignment -name BDF_FILE mul.bdf
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
-set_global_assignment -name VECTOR_WAVEFORM_FILE ../Waveform.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
