--- a/Effects_Pedal/Effects_Pedal.qsf
+++ b/Effects_Pedal/Effects_Pedal.qsf
@@ -60,7 +60,6 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_location_assignment PIN_N5 -to ADCCLK
-set_location_assignment PIN_AB7 -to AUDIO_OUT
 set_location_assignment PIN_P11 -to DE10CLK
 set_location_assignment PIN_C10 -to DE10Reset
 set_location_assignment PIN_C17 -to display0[7]
@@ -158,7 +157,6 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 set_global_assignment -name DSP_BLOCK_BALANCING "DSP BLOCKS"
-set_location_assignment PIN_AB8 -to FIR_OUT
 set_location_assignment PIN_C12 -to OCT_EN
 set_location_assignment PIN_AB9 -to TREMOLO_OUT
 set_global_assignment -name ENABLE_SIGNALTAP OFF
@@ -166,7 +164,6 @@ set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name FLOW_DISABLE_ASSEMBLER OFF
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_location_assignment PIN_A12 -to TREMOLO_EN
-set_location_assignment PIN_Y10 -to REVERB_OUT
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name VHDL_FILE reverb_block.vhd
 set_global_assignment -name QIP_FILE REVERB/synthesis/REVERB.qip
@@ -199,4 +196,5 @@ set_global_assignment -name BSF_FILE ADC/ADC.bsf
 set_global_assignment -name BDF_FILE Effects_Pedal.bdf
 set_global_assignment -name BDF_FILE mul.bdf
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_location_assignment PIN_B12 -to REV_ENABLE
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
